# pub-list

./: .flake8  .gitignore  .travis.yml  README.md  app.py  fabfile.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: tests.yml
conf/: nginx.conf  supervisord.conf
public/assets/: app-edit.js  app-view.js
publist/: __init__.py  schemes.py  settings.py  storage.py  webapp.py
publist/routes/: __init__.py  api.py  pages.py
publist/storage/: __init__.py  redis_helpers.py  todolist.py  user.py
publist/templates/: edit.html  view.html
static/: index.html  index.js
templates/: base.html  edit.html  read.html
tests/: conftest.py  test_auth.py  test_create_todo_list_page.py  test_staff_api.py  test_upsert_task_api.py
tests/api/: test_lock_task_api.py  test_remove_task_api.py
tests/pages/: test_auth.py  test_create_todo_list_page.py  test_edit_todo_list_page.py  test_view_todo_list_page.py
tests/storage/: test_cleanup_uid.py  test_create_todolist.py  test_create_user.py  test_generate_uid.py  test_get_task.py  test_get_task_or_raise.py  test_get_todolist.py  test_get_user.py  test_lock_task.py  test_remove_task.py  test_unlock_task.py  test_upsert_task.py
www/static/: index.js
