[tool.poetry]
name = "pub-list"
version = "0.1.0"
description = ""
authors = ["Simon Efremov <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"
httpx = "^0.22.0"
trio = "^0.20.0"
anyio = "^3.6.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
