[tool.poetry]
name = "pub-list"
version = "0.1.0"
description = ""
authors = ["Simon Efremov <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
Jinja2 = "^3.1.2"
uvicorn = {extras = ["uvloop"], version = "^0.17.6"}
uvloop = "^0.16.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"
httpx = "^0.23.0"
trio = "^0.20.0"
anyio = "^3.6.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
line_length = 125

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
